--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MyBookApplication</string>
     <string name="btn_get_text">GET</string>
+    <string name="free_text">FREE</string>
+    <string name="something_went_wrong">Something went wrong!</string>
 </resources>
