- Added dialog popup to show book info on click of the recyclerview item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">MyBookApplication</string>
-    <string name="btn_get_text">GET</string>
+    <string name="btn_get_text">Get</string>
     <string name="free_text">FREE</string>
-    <string name="something_went_wrong">Something went wrong!</string>
+    <string name="something_went_wrong">Something went wrong!\n Tap here to retry</string>
+    <string name="sample_text">Sample</string>
 </resources>
